update initial interface

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Library Management System</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./frontend/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" 
     integrity ="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" 
     crossorigin="anonymous"/>
@@ -25,7 +25,7 @@
         <div class="right box">
 
             <div class="content" id="started">
-                <a href="./public/login.html" id="started" class="btn">
+                <a href="./frontend/public/login.html" id="started" class="btn">
                     <h1>Let's get started  &nbsp;<i class="fas fa-arrow-right"></i></h1>
                 </a>
             </div>
