--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -28,7 +28,8 @@
             </p>
 
         </form>
+
+        <a href="./welcome.html" id="demo" class="demo btn">Demo</a>
     </div>
-    <script src="../js/login.js"></script>
 </body>
 </html>
