--- a/frontend/public/welcome.html
+++ b/frontend/public/welcome.html
@@ -20,7 +20,7 @@
             </div>
             <div class="nav-div content">
                 <h3 class="nav-option active" id="dash">Dashboard</h3>
-                <a href="#" class="nav-option"><h3 class="dash" id="dash">Issued</h3></a>
+                <h3 class="nav-option" id="issued"></h3><a href="#" class="issued nav-option">Issued</a></h3>
                 <h3 class="nav-option profile" id="profile">Profile</h3>
             </div>
         </nav>
@@ -43,7 +43,14 @@
                 <h2>Books Not Returned</h2>
             </div>
 
+            <div class="dashboard-item fine">
+                <i class="fas fa-money-check"></i>
+                <h2>Fine</h2>
+            </div>
+
         </div>
+
     </div>
+    <script src="../js/welcome.js"></script>
 </body>
 </html>
